--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -5,10 +5,10 @@
         <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
         <meta http-equiv="Pragma" content="no-cache" />
         <meta http-equiv="Expires" content="0" />
-        <title>Angling</title>
+        <title>Angler</title>
     </head>
     <body>
-        <h1>Angling: A Simple Web Hook For Saving And Viewing URL Requests</h1>
+        <h1>Angler: A Simple Web Hook For Saving And Viewing URL Requests</h1>
         <div class='content'>
         <hr>
         {% block content %}{% endblock %}
